force-app/main/default/objects/Black_Square__c/Black_Square__c.object-meta.xml
<CustomObject>
    <label>Black Square</label>
    <nameField>
        <displayFormat>BS-{0000}</displayFormat>
        <label>Black Square Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Black Squares</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>