force-app/main/default/objects/Black_Square__c/fields/Across__c.field-meta.xml
<CustomField>
    <fullName>Across__c</fullName>
    <label>Across</label>
    <precision>2</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>