force-app/main/default/objects/Black_Square__c/fields/Puzzle__c.field-meta.xml
<CustomField>
    <fullName>Puzzle__c</fullName>
    <label>Puzzle</label>
    <referenceTo>Puzzle__c</referenceTo>
    <relationshipLabel>Black Squares</relationshipLabel>
    <relationshipName>Black_Squares</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>